# gen-ai-tutorials

./: .env.dev  .gitignore  Makefile  README.md  pyproject.toml
app/: poetry.toml  pyproject.toml  repo_metrics.py
app/app/: ollama_github_example.py  repo_changelog.py  repo_metrics.py  sonar_evaluations.py  task_sonarqube.py
app/app/agents/: create_chat.py
app/app/callbacks/: __init__.py  callbacks.py
app/app/configs/: __init__.py  app-config.toml  settings.py  tools.py
app/app/examples/: config_params.py  tools.py
app/app/prompts/: __init__.py  prompts_templates_models.py
app/app/tasks/: __init__.py  github.py  sonar_evaluations.py  task_changelog.py  task_sonarqube.py  task_sonarqube_v2.py
app/app/telemetry/: __init__.py  instrumentation.py  tools_git.json  tools_sonar_analysis.json  tools_sonar_scan.json
app/app/tools/: __init__.py  tools_git.py  tools_llm_chat.py  tools_sonar_analysis.py  tools_sonar_analyzis.py  tools_sonar_scanner.py  tools_teste.py
app/app/tools/configs-toml/: tools-git.toml  tools-sonar.toml  tools.toml
app/app/utils/: commands.py  parser_config_toml_files.py
app/chat/: main.py
app/google-colab/: Ollama_ngrok.ipynb
app/reports/: relatorio_sonar-v1.0.0.md
app/tools/: docker-compose.yml
app/tools/grafana/: Dockerfile  datasource.yml  grafana.yml
app/tools/langfuse/: docker-compose.yml
app/tools/loki/: Dockerfile  deployment.yml  local-config.yaml  loki.yml
app/tools/otelcollector/: config.yaml  docker-compose.yml  otelcollector.yml
app/tools/prometheus/: deployment.yml  prometheus-config.yml
app/tools/sonarqube/: deployment.yml  docker-compose.yml  sonarqube.yml
app/tools/tempo/: Dockerfile  deployment.yml  tempo-config.yml
libs/core/: pyproject.toml
libs/core/genai_core/callbacks/: __init__.py  callbacks.py
libs/core/genai_core/logging/: __init__.py  logging.py
libs/core/genai_core/prompts/: __init__.py  prompts_templates_models.py
libs/core/genai_core/requests/: __init__.py  requests.py
libs/core/genai_core/shell/: __init__.py  shell.py
libs/core/genai_core/telemetry/: __init__.py  instrumentation.py
libs/core/genai_core/tools/: __init__.py  tools.py
libs/genai/: pyproject.toml
libs/genai/genai/tasks/: __init__.py  task_changelog.py  task_sonarqube.py
libs/genai/genai/tools/: __init__.py  tools_configs.py  tools_git.py  tools_llm_chat.py  tools_sonar_analysis.py  tools_sonar_scanner.py
libs/genai/genai/utils/: commands.py  paths.py  requests.py
(+38 files in other folders)
