[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["rodneyrick <144851417+rodneyrick2rp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
langchain = "^0.1.11"
langchain-core = "^0.1.30"
langchain-community = "^0.0.27"
langchain-openai = "^0.0.8"
ipykernel = "^6.29.4"
poetry-kernel = "^0.1.3"
openai = "^1.16.0"
chromadb = "^0.4.24"
tiktoken = "^0.6.0"
langchainhub = "^0.1.15"
gitpython = "^3.1.43"
pysqlite3 = "^0.5.2"
pysqlite3-binary = "^0.5.2.post3"
qdrant-client = {extras = ["fastembed"], version = "^1.8.2"}
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
idna = "^3.6"
requests = "^2.31.0"
urllib3 = "^2.2.1"
langfuse = "^2.25.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:run"